--- a/Penguin.Cms.Logging.Repositories.csproj
+++ b/Penguin.Cms.Logging.Repositories.csproj
@@ -7,7 +7,7 @@
     <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
     <PackageProjectUrl>https://github.com/penguincms/Penguin.Cms.Logging.Repositories</PackageProjectUrl>
     <PackageIconUrl>http://www.penguinms.com/client/images/pg.png</PackageIconUrl>
-    <Version>1.0.4</Version>
+    <Version>2.0.0</Version>
 	<IncludeSymbols>true</IncludeSymbols>    
 <SymbolPackageFormat>snupkg</SymbolPackageFormat>
 
@@ -15,8 +15,12 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Penguin.Cms.Logging.Entities" Version="1.0.2" />
-    <PackageReference Include="Penguin.Persistence.Repositories" Version="1.2.2" />
+    <PackageReference Include="Microsoft.CodeAnalysis.FxCopAnalyzers" Version="2.9.4">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+    <PackageReference Include="Penguin.Cms.Logging.Entities" Version="2.0.0" />
+    <PackageReference Include="Penguin.Persistence.Repositories" Version="2.0.0" />
   </ItemGroup>
 
  <ItemGroup>
